@@ -21,8 +21,13 @@ not yet  BJH  Release 10.44.00
               pnmpad: Add fast PBM path.  Thanks Prophet of the Way
               <afu@wta.att.ne.jp>.
 
+              pamtosvg: remove "needed exchange" debug trace.
+
               Add pbmminkowski (source code has been in package since 10.12
               but not documented or built by default).
+
+              pnmmontage: don't corrupt file names when they contain
+              colons.
 
               pamflip: fix bug: garbage output for PBMs, since 10.42.
 
